# combinatorial_GWAS

./: .gitignore  00_core.ipynb  GPU.ipynb  Makefile  README.md  pyproject.toml  read_data_very_basic.ipynb  run.py  settings.ini
.github/workflows/: main.yml
combinatorial_GWAS/: _nbdev.py  data_catalog.py  phenotypes.py
combinatorial_gwas/: _nbdev.py  data_catalog.py  genotype.py  high_level.py  phenotypes.py
combinatorial_gwas/phenotypes/: __init__.py
conf/base/: catalog.yml  globals.yml  parameters.yaml  parameters.yml
conf/base/catalog_intermediate/: simulation.yaml
docs/: Example Notebook.html  Field.html  _config.yml  catalog.html  genotype.html  high_level.html  index.html  phenotypes.html  read_data_very_basic.html  sidebar.json  simulation.html
docs/_data/: topnav.yml
hp_tuning/initial_model/: oracle.json
notebooks/demo/: GPU.ipynb  Get_pheno_geno.ipynb  Loading_result.ipynb  Untitled1.ipynb
notebooks/interpretability/: Untitled.ipynb
notebooks/neural_network_training/: linear regression.ipynb  lr.py  nn.py  project_cnn.ipynb  project_nn.ipynb  run_simulated_jobs.ipynb  simulated.py  submit_cluster_jobs.ipynb  test_simulation.py
notebooks/package/: Example Notebook.ipynb  Field.ipynb  catalog.ipynb  genotype.ipynb  high_level.ipynb  index.ipynb  phenotypes.ipynb  read_data_very_basic.ipynb  simulation.ipynb
notebooks/scratch_space/: I84_cleaned.tsv  R07_cleaned.tsv  genotype.ipynb
scripts/: interp.py
working_model/: saved_model.pb
working_model/variables/: variables.data-00000-of-00001  variables.index
(+109 files in other folders)
